--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,3 @@
-body{
-    margin: 0;
-    padding: 0;
-    background-color: #e5e5f7;
-    opacity: 87%;
-    background-image: radial-gradient( ellipse farthest-corner at 10px 10px , #d8d9eb, #d8d9eb 50%, #e5e5f7 50%);
-    background-size: 10px 10px;
-}
-
 nav {
     background-color:#181818;
     display: flex;
@@ -18,7 +9,7 @@ nav {
     height: 10vh;
 }
 
-#logo{
+#logo {
     max-width: 350px;
     height: auto;
 }
@@ -70,7 +61,7 @@ a{
     color: #f9f9f9;
     font-family: Arial, Helvetica, sans-serif;
     font-weight:bold;
-    padding: none;
+    padding: 0;
 }
 
 a:hover{
@@ -116,7 +107,7 @@ a:hover{
     width: fit-content;
     max-height: 0;
     overflow: hidden;
-    transition: all 0.3 ease-in-out;
+    transition: all 0.3s ease-in-out;
     list-style: none;
     margin-top: 1.4rem;
 }
@@ -128,7 +119,7 @@ a:hover{
     font-size: 1.5rem;
     color: #f9f9f9;
     text-decoration: none;
-    transition: all 0.3 ease-in-out;
+    transition: all 0.3s ease-in-out;
     font-size: 100%;
 }
 
