--- a/public/css/rating-style.css
+++ b/public/css/rating-style.css
@@ -5,6 +5,15 @@ body {
     color: black;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    background-color: #e5e5f7;
+    opacity: 87%;
+    background-image: radial-gradient( ellipse farthest-corner at 10px 10px , #d8d9eb, #d8d9eb 50%, #e5e5f7 50%);
+    background-size: 10px 10px;
+}
+
 .write_review {
     display: flex;
     justify-content: center;
@@ -98,7 +107,7 @@ body {
     padding-right: 10%;
     display: flex;
     justify-content: space-evenly;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 .headline_text h2 {
