--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -13,6 +13,15 @@
     background-size: 10px 10px;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    background-color: #e5e5f7;
+    opacity: 87%;
+    background-image: radial-gradient( ellipse farthest-corner at 10px 10px , #d8d9eb, #d8d9eb 50%, #e5e5f7 50%);
+    background-size: 10px 10px;
+}
+
 .loginForm .closebtn{
     position: absolute;
     top: 10px;
@@ -77,7 +86,7 @@ form .btns{
     width: 100%;
     position: relative;
     overflow: hidden;
-    border-radius: 15px; 
+    border-radius: 15px;
 }
 
 form .btns .inner{
